--- a/components/Header/components/SubLink/index.module.css
+++ b/components/Header/components/SubLink/index.module.css
@@ -1,31 +1,30 @@
 .link {
   display: block;
   margin: 0;
-  padding: 7px 30px;
+  padding: 2.522% 10.81%;
   text-decoration: none;
   color: var(--main-text-color);
   transition: all var(--transition);
 }
 
 .link span {
-  font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 20px;
+  line-height: 125%;
   transition: all var(--transition);
 }
 
 .link:hover {
-  background-color: var(--menu-hover-bgr);
+  background-color: var(--submenu-bgr);
 }
 
 .link:hover span {
-  color: var(--blur-accent);
+  color: var(--desc-text-color3);
 }
 
 span.active {
   font-weight: 700;
-  color: var(--blur-accent);
+  color: var(--desc-text-color3);
 }
 
 @media (max-width: 425px) {
