--- a/components/Header/index.module.css
+++ b/components/Header/index.module.css
@@ -1,18 +1,21 @@
 .container {
+  position: relative;
+  z-index: 2;
   margin: 0 auto;
   max-width: 1440px;
 }
 
 .wrapper {
-  padding: 2.084% 2.5% 2.292% 2.778%;
+  position: relative;
+  z-index: 3;
   display: flex;
+  padding: 2.084% 2.5% 2.292% 2.778%;
 }
 
 .logoLink {
   display: block;
   width: 3.006%;
   margin-right: auto;
-  z-index: 1;
 }
 
 .mainLogo {
@@ -22,28 +25,26 @@
 }
 
 .overlayClose {
-  position: relative;
+  position: absolute;
   width: 0;
   height: 0;
   background-color: rgba(0, 0, 0, 0);
   transition: all var(--tarnsition);
-  z-index: -1;
+  z-index: 1;
 }
 
 .overlayOpen {
-  position: relative;
+  position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
   transition: all var(--tarnsition);
-  z-index: -1;
+  z-index: 1;
 }
 
 @media (max-width: 425px) {
   .wrapper {
-    position: relative;
     padding: 6.824% 3.765% 8.706% 3.765%;
-    z-index: 0;
   }
 
   .logoLink {
